Fix overflow of images in Gallery page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,10 @@ main {
     color:#fafafa
 }
 
+/* Gallery page */
+#photos img {
+    width: 100%;
+}
 
 /* Footer */
 #social-networks {
